Java 8 compatability with lock and memalloc rework for j11/15